# PD

./: .gitignore  package-lock.json  package.json
backend/: .gitignore  README.md  pyproject.toml
backend/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
backend/app/: config.json  config.py  config_nodb.json  db.py  general.py  main.py  mockData.json  sessions.py
backend/app/cards/: db_objects.py  main.py  objects.py
backend/app/containers/: __init__.py  queries.py
backend/app/page_constructor/: main.py
backend/app/users/: __init__.py  db_objects.py  main.py  objects.py
src/: App.tsx  ScrollToBottom.tsx  index.css
src/components/: Main.tsx
src/components/Avtorization/: Avtorization.module.scss  Avtorization.tsx
src/components/Calendar/: Calendar.module.scss  Calendar.tsx
src/components/Content/: Content.module.scss  Content.tsx
src/components/Header/: Header.module.scss  Header.tsx
src/components/Header/TopNavBar/: TopNavBar.module.scss
src/components/LabInfo/: LabInfo.module.scss  LabInfo.tsx
src/components/Labor/: Labor.module.scss  Labor.tsx
src/components/Main/: Main.tsx
src/components/Main/Body/: Body.tsx
src/components/Main/RequestList/: RequestList.module.scss  RequestList.tsx
src/components/Menu/: Menu.module.scss  Menu.tsx
src/components/Screen1/Header/: Header.tsx
src/components/Screen2/: Main2.tsx
src/components/Subject/: Subject.module.scss  Subject.tsx
src/components/Tasks/: Tasks.module.scss  Tasks.tsx
src/myTools/: colors.scss  size.scss  strings.tsx
src/styles/: colors.scss
(+31 files in other folders)
